Начал делать главную

--- a/src/sass/blocks/default/link.scss
+++ b/src/sass/blocks/default/link.scss
@@ -29,7 +29,7 @@
         }
 
         &:hover .icon {
-            fill: var(--c-primary-hover);
+            fill: var(--c-primary);
         }
     }
 
