--- a/src/sass/blocks/default/text.scss
+++ b/src/sass/blocks/default/text.scss
@@ -1,5 +1,7 @@
 .h1{
     margin-bottom: 8px;
+    font-family: var(--f-secondary);
+    font-style: italic;
     font-size: var(--f-s-title);
     font-weight: 700;
     line-height: 1;
