--- a/src/sass/layouts/body.scss
+++ b/src/sass/layouts/body.scss
@@ -3,5 +3,7 @@
     font-size: var(--f-s-body);
     line-height: 1.5;
     color: var(--c-text);
-    display: block;
+    &._index {
+        background: linear-gradient(180deg, #A7FAFF 0%, #F77CAD 76.25%), linear-gradient(180deg, #FFF6A7 0%, #F77CAD 76.25%);
+    }
 }
