--- a/src/twig/layouts/main-menu.twig
+++ b/src/twig/layouts/main-menu.twig
@@ -1,19 +1,19 @@
 {% set mainMenu =[
     {
-        name: 'О курсе',
-        link: '#about',
+        name: 'Каталог',
+        link: '/catalog.html',
     },
     {
-        name: 'Программа',
-        link: '#program',
+        name: 'Доставка и оплата',
+        link: '/delivery.html',
     },
     {
-        name: 'Преимущества',
-        link: '#teachers',
+        name: 'Комиксы',
+        link: '/comics',
     },
     {
-        name: 'Стоимость',
-        link: '#price',
+        name: 'Контакты',
+        link: '/contacts',
     },
 ] %}
 
