--- a/src/sass/layouts/header.scss
+++ b/src/sass/layouts/header.scss
@@ -1,9 +1,25 @@
 .header {
     padding: 20px 0;
     .container {
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        grid-gap: 16px;
         align-items: center;
+    }
+
+    &__inner {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-gap: 20px;
+        justify-self: flex-end;
+        align-items: center;
+    }
+
+    &__cart {
+        padding: 8px 12px;
+        border: var(--border);
+        &:hover {
+            border-color: var(--c-primary);
+        }
     }
 }
