--- a/src/twig/components/logo.twig
+++ b/src/twig/components/logo.twig
@@ -1,3 +1,3 @@
 <a href="/" class="logo">
-    <img class="logo__img" src="assets/img/logo.svg" width="280" height="60" alt="Логотип" loading="lazy">
+    <img class="logo__img" src="assets/img/logo.png" width="100" height="100" alt="Логотип" loading="lazy">
 </a>
