--- a/src/twig/layouts/base.twig
+++ b/src/twig/layouts/base.twig
@@ -7,16 +7,15 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body class="body">
+<body class="body {% block bodyClass %}{% endblock %}">
 
 {% include 'header.twig' %}
-<main class="main">
+<main class="main {% block mainClass %}{% endblock %}">
     {% block content %}{% endblock %}
 </main>
-
 
 {% include 'footer.twig' %}
 <div id="svg-icons"></div>
