--- a/src/twig/layouts/header.twig
+++ b/src/twig/layouts/header.twig
@@ -1,6 +1,16 @@
 <header class="header">
     <div class="container">
-        {% include '../components/logo.twig' %}
         {% include 'main-menu.twig' %}
+        {% include '../components/logo.twig' %}
+        <div class="header__inner">
+            <a href="/lk.html" class="link _with-icon">
+                <svg class="icon"><use xlink:href="#lk"/></svg>
+                <span class="header__link-text">Личный кабинет</span>
+            </a>
+            <a href="/cart.html" class="header__cart link _with-icon">
+                <svg class="icon"><use xlink:href="#cart"/></svg>
+                <span class="header__link-text">Корзина пуста</span>
+            </a>
+        </div>
     </div>
 </header>
