--- a/src/twig/pages/index.twig
+++ b/src/twig/pages/index.twig
@@ -1,7 +1,13 @@
 {% extends '../layouts/base.twig' %}
 
 {% block title %}Главная{% endblock %}
+{% block bodyClass %}_index{% endblock %}
+{% block mainClass %}p-index{% endblock %}
 
 {% block content %}
-    {% include '../components/promo.twig' %}
+    <div class="container">
+        <div class="p-index__inner">
+            <h1 class="h1">Eva Elfie</h1>
+        </div>
+    </div>
 {% endblock %}
