--- a/src/sass/layouts/header.scss
+++ b/src/sass/layouts/header.scss
@@ -1,6 +1,17 @@
 .header {
-    padding: 20px 0;
-    .container {
+    position: relative;
+    z-index: 200;
+    padding: 16px 0;
+    @include media-breakpoint-up(lg) {
+        padding: 20px 0;
+        background-color: transparent;
+    }
+
+    &._menuActive {
+        background-color: var(--c-white);
+    }
+
+    &__container {
         display: grid;
         grid-template-columns: 1fr auto 1fr;
         grid-gap: 16px;
@@ -10,16 +21,36 @@
     &__inner {
         display: grid;
         grid-template-columns: auto auto;
-        grid-gap: 20px;
         justify-self: flex-end;
         align-items: center;
+        @include media-breakpoint-up(sm) {
+            grid-gap: 20px;
+        }
     }
 
     &__cart {
         padding: 8px 12px;
-        border: var(--border);
         &:hover {
             border-color: var(--c-primary);
         }
+
+        @include media-breakpoint-up(lg) {
+            border: var(--border);
+        }
     }
+
+    &__link-text {
+        display: none;
+        @include media-breakpoint-up(lg) {
+            display: block;
+        }
+    }
+
+    .main-menu {
+        display: none;
+        @include media-breakpoint-up(lg) {
+            display: block;
+        }
+    }
+
 }
