--- a/src/sass/layouts/main-menu.scss
+++ b/src/sass/layouts/main-menu.scss
@@ -1,4 +1,5 @@
 .main-menu {
+    justify-self: flex-start;
     &__list {
         display: grid;
         grid-auto-flow: column;
@@ -7,9 +8,11 @@
     }
 
     &__item {
-        &:not(:last-child) {
-            padding-right: 12px;
-            border-right: var(--border);
+        @include media-breakpoint-up(lg) {
+            &:not(:last-child) {
+                padding-right: 12px;
+                border-right: var(--border);
+            }
         }
     }
 
