--- a/src/sass/blocks/default/text.scss
+++ b/src/sass/blocks/default/text.scss
@@ -12,6 +12,8 @@
 
 .h2 {
     margin-bottom: 4px;
+    font-family: var(--f-secondary);
+    font-style: italic;
     font-size: var(--f-s-h2);
     font-weight: 500;
     line-height: 1;
