--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import "global/animations";
 
 @import "blocks/default/text";
+@import "blocks/default/form";
 @import "blocks/default/input";
 @import "blocks/default/btn";
 @import "blocks/default/mobile-btn";
@@ -27,3 +28,4 @@
 @import "blocks/socials";
 
 @import "pages/p-index";
+@import "pages/ p-contacts";
