--- a/src/twig/layouts/footer.twig
+++ b/src/twig/layouts/footer.twig
@@ -1,5 +1,7 @@
 <footer class="footer">
-    <div class="container">
-
+    <div class="footer__container container-fluid">
+        <span class="footer__logo">Eva Elfie</span>
+        <p class="footer__copyright">Все права защищены © 2021</p>
+        {% include '../components/socials.twig' %}
     </div>
 </footer>
