--- a/src/twig/layouts/main-menu.twig
+++ b/src/twig/layouts/main-menu.twig
@@ -9,11 +9,11 @@
     },
     {
         name: 'Комиксы',
-        link: '/comics',
+        link: '/comics.html',
     },
     {
         name: 'Контакты',
-        link: '/contacts',
+        link: '/contacts.html',
     },
 ] %}
 
