--- a/src/sass/blocks/default/input.scss
+++ b/src/sass/blocks/default/input.scss
@@ -1,19 +1,45 @@
 .input {
-    height: 44px;
-    padding: 14px 10px;
-    border: var(--border);
-    border-radius: var(--border-radius);
-    font-size: var(--f-s-body);
-    color: var(--c-primary);
-    background-color: var(--c-bg);
-    transition: var(--transitions);
-    &::placeholder {
+    --inputFontSize: var(--f-s-small);
+    --inputBorderColor: var(--c-lines);
+    --inputBorderRadius: var(--border-radius);
+    --inputColor: var(--c-text);
+    --inputColorPlaceholder: var(--c-text-second);
+    --inputBg: transparent;
+    --inputErrorFontSize: var(--f-s-small);
+    --inputErrorColor: var(--c-error);
+    width: 100%;
 
+    &__text {
+        width: 100%;
+        height: 60px;
+        padding: 14px 16px;
+        border: var(--border);
+        border-color: var(--inputBorderColor);
+        border-radius: var(--inputBorderRadius);
+        font-size: var(--inputFontSize);
+        color: var(--inputColor);
+        background-color: var(--inputBg);
+        transition: var(--transitions);
+
+        &::placeholder {
+            color: var(--inputColorPlaceholder);
+        }
+
+        &:hover {
+            opacity: 0.8;
+        }
+
+        &:active, &:focus {
+            opacity: 0.8;
+        }
     }
-    &:hover {
 
+    &__error {
+        font-size: var(--inputErrorFontSize);
+        color: var(--inputErrorColor);
     }
-    &:active, &:focus {
 
+    &._textarea {
+        height: auto;
     }
 }
