--- a/src/sass/blocks/socials.scss
+++ b/src/sass/blocks/socials.scss
@@ -10,6 +10,7 @@
         align-items: center;
         @include media-breakpoint-up(sm) {
             grid-template-columns: repeat(3, 1fr);
+            grid-gap: 24px;
         }
     }
 
