--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,4 +28,5 @@
 @import "blocks/socials";
 
 @import "pages/p-index";
-@import "pages/ p-contacts";
+@import "pages/p-contacts";
+@import "pages/p-404";
