Начал делать форму авторизации

--- a/src/twig/pages/contacts.twig
+++ b/src/twig/pages/contacts.twig
@@ -22,9 +22,9 @@
             </div>
             {% include '../components/socials.twig' %}
         </div>
-        <div class="p-contacts__form-wrapper">
-            <p class="p-contacts__form-title">Есть вопросы?</p>
-            <p class="p-contacts__form-desc">
+        <div class="form-inner">
+            <p class="form-inner__form-title">Есть вопросы?</p>
+            <p class="form-inner__form-desc">
                 Заполните форму ниже и мы свяжемся с вами в ближайшем времени
             </p>
             <form action="/" class="form">
