--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 
 @import "blocks/default/text";
 @import "blocks/default/form";
+@import "blocks/default/form-inner";
 @import "blocks/default/input";
 @import "blocks/default/btn";
 @import "blocks/default/mobile-btn";
