--- a/src/twig/pages/lk.twig
+++ b/src/twig/pages/lk.twig
@@ -2,11 +2,11 @@
 
 {% block title %}Авторизация{% endblock %}
 {% block bodyClass %}_bg{% endblock %}
-{% block mainClass %}p-auth section _with-women{% endblock %}
+{% block mainClass %}p-lk section _with-women{% endblock %}
 
 {% block content %}
 <div class="container-xl p-lk__container">
-    <div class="form-inner">
+    <div class="form-inner _small">
         <p class="form-inner__form-title">Войдите в ваш аккаунт</p>
         <form action="/" class="form">
             <div class="input">
@@ -15,7 +15,11 @@
             <div class="input">
                 <input class="input__text" type="password" placeholder="Пароль" required>
             </div>
-            <button class="btn _paper _big">Войти в аккаунт</button>
+            <button class="btn _paper ">Войти в аккаунт</button>
+            <button class="btn _with-icon">
+                <svg class="icon"><use xlink:href="#google"/></svg>
+                <span>Или войдите через Google </span>
+            </button>
         </form>
     </div>
 </div>
