--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import "blocks/default/text";
 @import "blocks/default/form";
 @import "blocks/default/form-inner";
+@import "blocks/default/checkbox";
 @import "blocks/default/input";
 @import "blocks/default/btn";
 @import "blocks/default/mobile-btn";
