--- a/src/twig/pages/lk.twig
+++ b/src/twig/pages/lk.twig
@@ -15,6 +15,13 @@
             <div class="input">
                 <input class="input__text" type="password" placeholder="Пароль" required>
             </div>
+            <div class="form__inner">
+                <div class="checkbox">
+                    <input class="checkbox__input" type="checkbox" id="remember" name="remember">
+                    <label class="checkbox__label link" for="remember">Запомнить меня</label>
+                </div>
+                <a class="form__forgot-link  link _revert" href="/forgot.html">Забыли пароль?</a>
+            </div>
             <button class="btn _paper ">Войти в аккаунт</button>
             <button class="btn _with-icon">
                 <svg class="icon"><use xlink:href="#google"/></svg>
