--- a/src/sass/blocks/default/section.scss
+++ b/src/sass/blocks/default/section.scss
@@ -31,6 +31,7 @@
 .section {
     padding-top: 28px;
     padding-bottom: 40px;
+    overflow: hidden;
     @include media-breakpoint-up(xl) {
         padding-top: 40px;
         padding-bottom: 60px;
@@ -39,7 +40,8 @@
     &._with-women {
         position: relative;
         &::before, &::after {
-            @include media-breakpoint-up(lg) {
+            @include media-breakpoint-up(xl) {
+                z-index: -1;
                 content: '';
                 position: absolute;
                 bottom: 0;
@@ -47,20 +49,20 @@
         }
 
         &::before {
-            @include media-breakpoint-up(lg) {
-                left: 0;
-                width: 36vw;
-                height: 36vw;
+            @include media-breakpoint-up(xl) {
+                left: -40px;
+                width: 28vw;
+                height: 28vw;
                 background: url("/assets/img/custom/main-girl-2.png") no-repeat;
                 background-size: contain;
             }
         }
 
         &::after {
-            @include media-breakpoint-up(lg) {
-                right: 0;
-                width: 32vw;
-                height: 32vw;
+            @include media-breakpoint-up(xl) {
+                right: -20px;
+                width: 28vw;
+                height: 28vw;
                 background: url("/assets/img/custom/art-woman.png") no-repeat right;
                 background-size: contain;
             }
