--- a/src/sass/blocks/card.scss
+++ b/src/sass/blocks/card.scss
@@ -2,15 +2,31 @@
     display: flex;
     flex-flow: column;
     &__img {
+        display: block;
+        width: fit-content;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    &__img-link {
+        display: block;
         width: fit-content;
         height: 174px;
         margin-bottom: 20px;
-        object-fit: contain;
+        transition: var(--transitions);
+        &:hover {
+            opacity: 0.7;
+        }
     }
 
     &__name {
         margin-bottom: 16px;
-        @include truncate-lines(1)
+        font-size: var(--f-s-body);
+        transition: var(--transitions);
+        @include truncate-lines(1);
+        &:hover {
+            opacity: 0.7;
+        }
     }
 
     &__desc {
