--- a/src/twig/pages/catalog.twig
+++ b/src/twig/pages/catalog.twig
@@ -30,6 +30,7 @@
         name: 'Футболка белая',
         desc: 'Футболка название и какой логотип',
         img: '/assets/img/catalog/item-1.png',
+        link: '#',
         price: '2 000',
         priceOld: '3 000'
     },
@@ -37,6 +38,7 @@
         name: 'Свитшот',
         desc: 'Футболка название и какой логотип Футболка название и какой логотип',
         img: '/assets/img/catalog/item-2.png',
+        link: '#',
         price: '2 000',
         priceOld: '3 000'
     },
@@ -44,6 +46,7 @@
         name: 'Худи тестирование очень длинного названия',
         desc: 'Футболка название и какой логотип',
         img: '/assets/img/catalog/item-3.png',
+        link: '#',
         price: '2 000',
         priceOld: '3 000'
     },
@@ -51,12 +54,14 @@
         name: 'Футболка белая',
         desc: 'Футболка название и какой логотип',
         img: '/assets/img/catalog/item-4.png',
+        link: '#',
         price: '2 000',
     },
     {
         name: 'Худи тестирование очень длинного названия',
         desc: 'Футболка название и какой логотип Футболка название и какой логотип Футболка название и какой логотип',
         img: '/assets/img/catalog/item-5.png',
+        link: '#',
         price: '2 000',
         priceOld: '3 000'
     },
@@ -64,6 +69,7 @@
         name: 'Футболка белая',
         desc: 'Футболка название и какой логотип',
         img: '/assets/img/catalog/item-6.png',
+        link: '#',
         price: '2 000',
         priceOld: '3 000'
     },
@@ -71,6 +77,7 @@
         name: 'Футболка белая',
         desc: 'Футболка название и какой логотип',
         img: '/assets/img/catalog/item-1.png',
+        link: '#',
         price: '2 000',
         priceOld: '3 000'
     },
@@ -78,6 +85,7 @@
         name: 'Футболка белая',
         desc: 'Футболка название и какой логотип',
         img: '/assets/img/catalog/item-2.png',
+        link: '#',
         price: '2 000',
     },
 ] %}
