Сверстана страница Доставка и оплата

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,7 +13,9 @@
 @import "blocks/default/form-inner";
 @import "blocks/default/checkbox";
 @import "blocks/default/input";
+@import "blocks/default/accordion";
 @import "blocks/default/btn";
+@import "blocks/default/btn-plus";
 @import "blocks/default/mobile-btn";
 @import "blocks/default/link";
 @import "blocks/default/logo";
