Сверстана страница Доставка и оплата

--- a/src/twig/pages/delivery.twig
+++ b/src/twig/pages/delivery.twig
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div class="container-xl p-delivery__container">
-        <h1 class="h2">Оплата и доставка</h1>
+        <h1 class="h2 margin-default">Оплата и доставка</h1>
         <div class="p-delivery__inner">
             <section class="accordion">
                 {% for item in accordion %}
