Добавлен age control

--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -61,5 +61,6 @@ $container-max-widths: (
     --mobileHeaderHeight: 92px;
     --border: 1px solid var(--c-lines);
     --border-radius: 8px;
+    --border-radius-big: 16px;
     --transitions: all 0.4s ease;
 }
