--- a/src/twig/layouts/base.twig
+++ b/src/twig/layouts/base.twig
@@ -23,6 +23,7 @@
 </main>
 
 {% include 'footer.twig' %}
-<div class="overlay"></div>
+{% include '../components/age-control.twig' %}
+<div class="overlay js-overlay"></div>
 <div id="svg-icons"></div>
 </body>
