--- a/src/sass/blocks/default/btn.scss
+++ b/src/sass/blocks/default/btn.scss
@@ -49,4 +49,8 @@
             margin-right: 20px;
         }
     }
+
+    &._paper-disabled {
+        background: url('/assets/img/custom/paper.png');
+    }
 }
