--- a/src/sass/blocks/default/overlay.scss
+++ b/src/sass/blocks/default/overlay.scss
@@ -1,5 +1,5 @@
 .overlay {
-    --overlayBg: rgba(0, 0, 0, 0.6);
+    --overlayBg: rgba(0, 0, 0, 0.8);
     position: fixed;
     z-index: 100;
     top: 0;
@@ -9,7 +9,8 @@
     height: 100vh;
     background-color: var(--overlayBg);
     animation: overlay 0.4s ease;
-    &._active {
+    &._active-age-control {
         display: block;
+        z-index: 1000;
     }
 }
