--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import "blocks/default/form-inner";
 @import "blocks/default/checkbox";
 @import "blocks/default/input";
+@import "blocks/default/modal";
 @import "blocks/default/accordion";
 @import "blocks/default/btn";
 @import "blocks/default/btn-plus";
@@ -32,6 +33,7 @@
 
 @import "blocks/socials";
 @import "blocks/card";
+@import "blocks/age-control";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
