Начал делать карточку товаров

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,10 +33,12 @@
 
 @import "blocks/socials";
 @import "blocks/card";
+@import "blocks/card-slider";
 @import "blocks/age-control";
 
 @import "pages/p-index";
 @import "pages/p-catalog";
+@import "pages/p-card";
 @import "pages/p-contacts";
 @import "pages/p-lk";
 @import "pages/p-404";
