--- a/src/twig/layouts/base.twig
+++ b/src/twig/layouts/base.twig
@@ -26,4 +26,6 @@
 {% include '../components/age-control.twig' %}
 <div class="overlay js-overlay"></div>
 <div id="svg-icons"></div>
+<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+
 </body>
