--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -31,6 +31,7 @@
 @import "layouts/sub-menu";
 @import "layouts/mobile-side";
 
+@import "blocks/favorite";
 @import "blocks/socials";
 @import "blocks/card";
 @import "blocks/card-slider";
