--- a/src/twig/components/age-control.twig
+++ b/src/twig/components/age-control.twig
@@ -6,8 +6,8 @@
             <span class="age-control__title-2">18 лет?</span>
         </p>
         <div class="age-control__btn-inner">
-            <button class="btn _paper js-accept-age-control" type="button">Да, мне есть 18</button>
-            <button class="btn _paper _paper-disabled js-close-age-control" type="button">
+            <button class="btn _paper js-accept-age-control _middle" type="button">Да, мне есть 18</button>
+            <button class="btn _paper _paper-disabled js-close-age-control _middle" type="button">
                 Нет, мне меньше 18
             </button>
         </div>
