Продолжаю делать карточку товара

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -32,6 +32,7 @@
 @import "layouts/mobile-side";
 
 @import "blocks/favorite";
+@import "blocks/b-price";
 @import "blocks/socials";
 @import "blocks/card";
 @import "blocks/card-slider";
