--- a/src/twig/pages/card.twig
+++ b/src/twig/pages/card.twig
@@ -10,9 +10,9 @@
             <div class="p-card__inner">
                 <h1 class="h2  p-card__title">Футболка</h1>
                 <span class="p-card__sku">Артикул: 00324</span>
-                <div class="p-card__price-wrapper">
-                    <span class="p-card__price _current">2000 руб.</span>
-                    <span class="p-card__price _old">3000 руб.</span>
+                <div class="b-price p-card__price-wrapper">
+                    <span class="b-price__item _current">2000 руб.</span>
+                    <span class="b-price__item _old">3000 руб.</span>
                     <button class="favorite _only-icon _active" type="button">
                         <svg class="icon"><use xlink:href="#like"/></svg>
                     </button>
