--- a/src/twig/components/card-item.twig
+++ b/src/twig/components/card-item.twig
@@ -1,4 +1,7 @@
 <section class="card">
+    <button class="favorite _only-icon _active" type="button">
+        <svg class="icon"><use xlink:href="#like"/></svg>
+    </button>
     <a class="card__img-link" href="{{ item.link }}">
         <img class="card__img" src="{{ item.img }}" alt="{{ item.name }}" loading="lazy">
     </a>
