--- a/src/sass/blocks/card.scss
+++ b/src/sass/blocks/card.scss
@@ -1,4 +1,5 @@
 .card {
+    position: relative;
     display: flex;
     flex-flow: column;
     &__img {
@@ -12,7 +13,7 @@
         display: block;
         width: fit-content;
         height: 174px;
-        margin-bottom: 20px;
+        margin: 0 auto 20px;
         transition: var(--transitions);
         &:hover {
             opacity: 0.7;
@@ -50,5 +51,11 @@
     &__cart {
         width: fit-content;
         min-width: auto;
+    }
+
+    .favorite {
+        position: absolute;
+        top: 0;
+        right: 20px;
     }
 }
