Закончил с карточкой товара

--- a/src/sass/blocks/default/section.scss
+++ b/src/sass/blocks/default/section.scss
@@ -1,3 +1,10 @@
+.margin-small {
+    margin-bottom: 16px;
+    @include media-breakpoint-up(xxl) {
+        margin-bottom: 24px;
+    }
+}
+
 .margin-default {
     margin-bottom: 24px;
     @include media-breakpoint-up(lg) {
