--- a/src/twig/pages/404.twig
+++ b/src/twig/pages/404.twig
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container-xl p-404__container">
         <div class="p-404__inner">
-            <h1 class="h1 margin-default">Ошибка 404</h1>
+            <h1 class="h1 margin-default custom-title">Ошибка 404</h1>
             <a class="btn _paper _big" href="/">На главную</a>
         </div>
 
