--- a/src/twig/pages/contacts.twig
+++ b/src/twig/pages/contacts.twig
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container-xl p-contacts__container">
         <div class="p-contacts__inner">
-            <h1 class="h2 margin-big-second">Контакты</h1>
+            <h1 class="h2 margin-big-second custom-title">Контакты</h1>
             <div class="p-contacts__item margin-default">
                 <span class="p-contacts__item-desc">Позвонить нам</span>
                 <a class="p-contacts__item-link link" href="tel:+32903247324932">
