--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,6 +33,7 @@
 
 @import "blocks/favorite";
 @import "blocks/b-price";
+@import "blocks/b-counter";
 @import "blocks/socials";
 @import "blocks/card";
 @import "blocks/card-slider";
