--- a/src/twig/pages/index.twig
+++ b/src/twig/pages/index.twig
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container-xl p-index__container">
         <div class="p-index__inner">
-            <h1 class="h1 margin-big">Eva Elfie</h1>
+            <h1 class="h1 margin-big custom-title">Eva Elfie</h1>
             {% include '../components/socials.twig' %}
             <div class="p-index__btn-inner">
                 <a href="/catalog.html" class="btn _paper _big _with-icon">
