Добавлен выбор цвета

--- a/src/twig/pages/card.twig
+++ b/src/twig/pages/card.twig
@@ -18,6 +18,17 @@
                     </button>
                 </div>
                 <div class="p-card__wrapper margin-small">
+                    <div class="b-variations">
+                        <span class="b-variations__text">Цвет</span>
+                        <div class="radio" style="--radioColorBg: #000; --radioColorBgChecked: #fff" title="Белый">
+                            <input class="radio__input" id="white" type="radio" name="color" checked>
+                            <label class="radio__label link" for="white"></label>
+                        </div>
+                        <div class="radio"  style="--radioColorBg: #fff" title="Чёрный">
+                            <input class="radio__input" id="black" type="radio" name="color" >
+                            <label class="radio__label link" for="black"></label>
+                        </div>
+                    </div>
                     <div class="b-counter">
                         <span class="b-counter__text">Количество</span>
                         <div class="b-counter__inner">
