--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import "blocks/default/form";
 @import "blocks/default/form-inner";
 @import "blocks/default/checkbox";
+@import "blocks/default/radio";
 @import "blocks/default/input";
 @import "blocks/default/modal";
 @import "blocks/default/accordion";
@@ -34,6 +35,7 @@
 @import "blocks/favorite";
 @import "blocks/b-price";
 @import "blocks/b-counter";
+@import "blocks/b-variations";
 @import "blocks/socials";
 @import "blocks/card";
 @import "blocks/card-slider";
