--- a/src/sass/pages/p-card.scss
+++ b/src/sass/pages/p-card.scss
@@ -8,6 +8,16 @@
         }
     }
 
+    &__wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 40px;
+        width: fit-content;
+        @include media-breakpoint-up(xl) {
+            grid-template-columns: 1fr 1fr;
+        }
+    }
+
     &__inner {
         order: -1;
         @include media-breakpoint-up(xl) {
